# git-reports

./: .gitignore  README.md  chart_output.html  pyproject.toml  requirements.txt  setup.cfg
src/git_reports/: analyser.py  chart_template.jinja
