[metadata]

name = GitReports
version = 0.0.1
author = Premkumar Chalmeti
author_email = premkumarchalmeti@gmail.com
description = GitReports is a statistical analysis tool for git repositories.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/premchalmeti/git-peek.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src